fix break alert alignment

--- a/css/components/break-screen.scss
+++ b/css/components/break-screen.scss
@@ -106,6 +106,8 @@
   }
 
   &__alert {
+    --content-max-size: 530px;
+
     display: flex;
     flex-direction: column;
     height: var(--content-max-size);
